# cli

./: BRIEF.md  Cargo.toml  README.md  phase-1-summary.md
.github/workflows/: release.yml
docs/: cli-user-surface-v2-refactor.md  factory-runtime-phase-6-cli-operator-workflow.md  llm-response-delivery-plan.md
docs/help/: abbot-acls-delete.md  abbot-acls-update.md  abbot-aggregate-get.md  abbot-aggregate-run.md  abbot-aggregate.md  abbot-api-acls-create.md  abbot-api-acls-delete.md  abbot-api-acls-update.md  abbot-api-acls.md  abbot-api-aggregate-get.md  abbot-api-aggregate-run.md  abbot-api-aggregate.md  abbot-api-bulk-create.md  abbot-api-bulk-delete.md  abbot-api-bulk-export.md  abbot-api-bulk-import.md  abbot-api-bulk-run.md  abbot-api-bulk-update.md  abbot-api-bulk.md  abbot-api-cron-delete.md  abbot-api-cron-disable.md  abbot-api-cron-enable.md  abbot-api-cron-get.md  abbot-api-cron-update.md  abbot-api-cron.md  abbot-api-data-create.md  abbot-api-data-delete-record.md  abbot-api-data-delete.md  abbot-api-data-patch-record.md  abbot-api-data-patch.md  abbot-api-data-put.md  abbot-api-data-relationship-child-delete.md  abbot-api-data-relationship-child-get.md  abbot-api-data-relationship-child-patch.md  abbot-api-data-relationship-child-put.md  abbot-api-data-relationship-create.md  abbot-api-data-relationship-delete.md  abbot-api-data-relationship-get.md  abbot-api-data-relationship-update.md  abbot-api-data-update.md  (+154 more)
scripts/: install.sh
scripts/integration/: README.md  api-basic.sh  auth-basic.sh  lib.sh  run-all.sh
src/: api.rs  api.rs.test.rs  cli.rs  command_docs.rs  commands.rs  commands.rs.test.rs  config.rs  data.rs  error.rs  lib.rs  main.rs  output.rs
src/cli/: acls.rs  aggregate.rs  (+26 more)
tests/: live_auth_dissolve.rs
(+36 files in other folders)
