[package]
name = "abbotik-cli"
version = "2.0.0"
edition = "2021"
license = "MIT"
description = "Rust CLI for the Abbotik API"

[[bin]]
name = "abbot"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "5"
ed25519-dalek = { version = "2", features = ["pkcs8", "pem"] }
include_dir = "0.7"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
url = { version = "2", features = ["serde"] }

[profile.dev]
debug = 0
incremental = true
codegen-units = 256

[profile.dev.package."*"]
debug = 0
